# taxigo

./: README.md
backend/: .gitignore  manage.py  pyproject.toml
backend/taxigo_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/src/app/pages/: index.tsx
